--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,11 @@
   <title>city bank</title>
 </head>
 <body>
-  
+      <h1 style="background-color: red;">Hey welcome to our react app</h1>
+      <h3 style="background-color: yellow;">banking application </h3>
+      <h2 style="background-color: yellowgreen;">on : 01/july/2024 we will start executing </h2>
+      <h4 style="red">heartly wishes to our developer
+        ...Shashank..Amit..Divyanshu..Raghav..viggu..Ashirbad
+      </h4>
 </body>
 </html>
